--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ lint = "task lint-black && task lint-flake8 && task lint-mypy"
 lint-flake8 = "flake8 demo db tests"
 lint-mypy = "mypy demo db tests"
 lint-black = "black --check demo db tests"
+test = "pytest tests"
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -26,9 +27,9 @@ psycopg2 = "^2.9.6"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 bcrypt = "^4.0.1"
+httpx = "^0.24.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
 black = "^23.3.0"
 flake8 = "^6.0.0"
 isort = "^5.12.0"
@@ -42,6 +43,8 @@ pep8-naming = "^0.13.3"
 mypy = "^1.3.0"
 python-multipart = "^0.0.6"
 email-validator = "^2.0.0"
+pytest = "^7.3.1"
+SQLAlchemy-Utils = "^0.41.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
